--- a/server/package.json
+++ b/server/package.json
@@ -4,24 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tsc": "tsc",
-    "ts-node": "ts-node"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "nodejs",
+    "express",
+    "mysql",
+    "restapi"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "helmet": "^4.2.0",
-    "moment": "^2.29.1",
-    "mysql2": "^2.2.5"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.8",
-    "@types/helmet": "^4.0.0",
-    "@types/node": "^14.14.7",
+    "mysql": "github:mysqljs/mysql",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
