--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "nuxt": "^2.14.11"
   },
   "devDependencies": {
